--- a/index.html
+++ b/index.html
@@ -244,17 +244,17 @@
         <div class="footer_inner">
           <ul>
             <li>
-              <a href="#"
+              <a href="https://www.instagram.com/" target="_blank"
                 ><img src="images/footer_sns_inst.png" alt="인스타그램"
               /></a>
             </li>
             <li>
-              <a href="#"
+              <a href="https://ko-kr.facebook.com/" target="_blank"
                 ><img src="images/footer_sns_facebook.png" alt="페이스북"
               /></a>
             </li>
             <li>
-              <a href="#"
+              <a href="https://www.youtube.com/" target="_blank"
                 ><img src="images/footer_sns_youtube.png" alt="유투브"
               /></a>
             </li>
