--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
           <div class="ask_box form_text">
             <form action="ask">
               <p>성함</p>
-              <input type="text" name="id" id="input1" />
+              <input id="input1" type="text" name="id" />
               <p>연락처</p>
-              <input type="text" name="id" id="input1" />
+              <input id="input1" type="text" name="id" />
               <p>이메일</p>
-              <input type="text" name="id" id="input1" />
+              <input id="input1" type="text" name="id" />
               <p>문의 내역</p>
-              <input type="text" name="id" id="input2" />
+              <input id="input2" type="text" name="id" />
               <input id="input3" type="submit" value="전송하기" />
             </form>
           </div>
